--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
         <version>${jackson.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>${gson.version}</version>
+      </dependency>
+      <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
         <version>1.1.3</version>
@@ -285,6 +290,7 @@
     <cglib.version>3.0</cglib.version>
     <ehcache.version>2.6.6</ehcache.version>
     <freemarker.version>2.3.20</freemarker.version>
+    <gson.version>2.2.4</gson.version>
     <hamcrest.version>1.3</hamcrest.version>
     <jackson.version>2.3.1</jackson.version>
     <junit.version>4.11</junit.version>
