--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,4 +8,17 @@
   </parent>
   <artifactId>spring-security-rest-common</artifactId>
   <packaging>jar</packaging>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.scala-tools</groupId>
+        <artifactId>maven-scala-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
